Implemented the simple auth for book api
